<resources>
    <string name="app_name">GardenHelper</string>
    <string name="title_objects">Объекты</string>
    <string name="title_settings">Настройки</string>
    <string name="title_garden_list">Схемы</string>
    <string name="title_calendar">Календарь</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note">Добавить заметку</string>
    <string name="calendar">Погодный календарь</string>
    <string name="settings">Настройки</string>
    <string name="settings_login">Вход/регистрация</string>
    <string name="settings_load_in">Загрузить данные в облако</string>
    <string name="settings_load_out">Загрузить данные из облака</string>
    <string name="settings_location">Настройки геолокации</string>
    <string name="gardens">Схемы участков</string>
    <string name="objects">Растения и строения</string>
    <string name="date">Календарь</string>
    <string name="notes">Заметки</string>
    <string name="notifications">Напоминания</string>
    <string name="enable_notifications">Включить напоминания</string>
    <string name="search_hint">Поиск объектов</string>
    <string name="create_note">Создать заметку</string>
    <string name="edit_note">Редактировать заметку</string>
    <string name="create_object">Создать объект</string>
    <string name="edit_object">Редактировать объект</string>
    <string name="object">Объект</string>
    <string name="type_object_header">Тип объекта</string>
    <string name="create_notification">Создать напоминание</string>
    <string name="edit_notification">Редактировать напоминание</string>
    <string name="et_note_name_hint">Название*</string>
    <string name="name_notification">Название</string>
    <string name="et_note_description_hint">Текст заметки</string>
    <string name="et_object_description_hint">Описание</string>
    <string name="et_notification_description_hint">Текст напоминания</string>
    <string name="btn_add_photo">Добавить фото</string>
    <string name="create">Создать</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="select_date">Выберите дату</string>
    <string name="select_time">Выберите время</string>
    <string name="save_notification">Сохранить напоминание</string>
    <string name="save_note">Сохранить заметку</string>
    <string name="register">Регистрация</string>
    <string name="login">Вход</string>
</resources>