<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_garden_list">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.gardenhelper.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_garden_list"
        android:name="com.example.gardenhelper.ui.garden.GardenListFragment"
        android:label="@string/title_garden_list"
        tools:layout="@layout/fragment_garden_list" />

    <fragment
        android:id="@+id/navigation_objects"
        android:name="com.example.gardenhelper.ui.objects.ObjectsFragment"
        android:label="@string/title_objects"
        tools:layout="@layout/fragment_objects" />
</navigation>