<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/action_bar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_50"
        android:background="@color/background_color"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:paddingStart="@dimen/padding_16"
        android:text="@string/settings"
        android:textColor="@color/text_black"
        android:textFontWeight="600"
        android:textSize="@dimen/text_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16"
        app:layout_constraintTop_toBottomOf="@id/action_bar">

        <TextView
            android:id="@+id/login_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings_login"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_16" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/background_color"
            android:src="@drawable/leading_icon" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/load_in_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16"
        app:layout_constraintTop_toBottomOf="@id/login_layout">

        <TextView
            android:id="@+id/load_data_to_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings_load_in"
            android:textColor="@color/text_black"
            android:clickable="true"
            android:textSize="@dimen/text_16" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/background_color"
            android:src="@drawable/leading_icon" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/load_out_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16"
        app:layout_constraintTop_toBottomOf="@id/load_in_layout">

        <TextView
            android:id="@+id/load_data_from_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings_load_out"
            android:textColor="@color/text_black"
            android:clickable="true"
            android:textSize="@dimen/text_16"
            app:layout_constraintTop_toBottomOf="@id/load_data_to_cloud" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/background_color"
            android:src="@drawable/leading_icon" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/geolocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16"
        app:layout_constraintTop_toBottomOf="@id/load_out_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings_location"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_16"
            app:layout_constraintTop_toBottomOf="@id/load_data_to_cloud" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/background_color"
            android:src="@drawable/leading_icon" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>