<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.notifications.edit_notification.EditNotificationFragment"    android:background="@color/background_color">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/background_color"
        android:src="@drawable/ic_back_button_48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/top_tab"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginVertical="4dp"
        android:background="@color/background_color"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:paddingStart="16dp"
        android:text="@string/edit_notification"
        android:textColor="@color/text_black"
        android:textFontWeight="500"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/top_tab"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="56dp"
        style="@style/NotesInputEditTextStyle"
        android:hint="@string/et_note_name_hint"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/top_tab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintEnabled="true"
        app:hintTextColor="@color/text_black"
        android:textColorHint="@color/text_black"
        app:boxStrokeColor="@color/text_black"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_regular"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/text_black"
            android:layout_marginTop="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="56dp"
        style="@style/NotesInputEditTextStyle"
        android:hint="@string/et_notification_description_hint"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/padding_16"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintEnabled="true"
        app:hintTextColor="@color/text_black"
        android:textColorHint="@color/text_black"
        app:boxStrokeColor="@color/text_black"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_regular"
            android:textAllCaps="false"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:layout_marginTop="0dp"
            android:maxLines="20"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Дата уведомления -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/NotesInputEditTextStyle"
        android:hint="@string/select_date"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4"
        android:textColorHint="@color/light_gray"
        app:boxStrokeColor="@color/text_black"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:focusable="false"
            android:textColor="@color/text_black"
            android:clickable="true"
            android:textColorHint="@color/light_gray"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Время уведомления -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/NotesInputEditTextStyle"
        android:hint="@string/select_time"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_description"
        app:layout_constraintStart_toEndOf="@id/date_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4"
        android:textColorHint="@color/light_gray"
        app:boxStrokeColor="@color/text_black"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_time"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textColor="@color/text_black"
            android:focusable="false"
            android:clickable="true"
            android:textColorHint="@color/light_gray"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/active_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/background_color"
        android:text="@string/enable_notifications"
        android:textAllCaps="false"
        android:textColor="@color/text_black"
        android:drawablePadding="@dimen/padding_8"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_24"
        android:layout_marginBottom="@dimen/padding_16"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_notification"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_50"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_24"
        android:layout_marginBottom="@dimen/padding_16"
        android:gravity="center"
        android:text="@string/save_notification"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/active_switch" />

</androidx.constraintlayout.widget.ConstraintLayout>