<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.objects.create_object.CreateObjectFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/background_color"
        android:src="@drawable/ic_back_button_48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/top_tab"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginVertical="4dp"
        android:background="@color/background_color"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:paddingStart="16dp"
        android:text="@string/create_object"
        android:textColor="@color/text_black"
        android:textFontWeight="500"
        android:textSize="@dimen/text_22"
        app:layout_constraintBottom_toTopOf="@id/top_tab"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/object_icon_shape"
        android:scaleType="centerInside"
        android:src="@drawable/add_photo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_tab" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name"
        style="@style/NotesInputEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/padding_16"
        android:hint="@string/et_note_name_hint"
        android:textColorHint="@color/text_black"
        app:boxStrokeColor="@color/text_black"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintEnabled="true"
        app:hintTextColor="@color/text_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/ys_display_regular"
            android:textAllCaps="false"
            android:textColor="@color/text_black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_description"
        style="@style/NotesInputEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/padding_16"
        android:hint="@string/et_object_description_hint"
        android:textColorHint="@color/text_black"
        app:boxStrokeColor="@color/text_black"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintEnabled="true"
        app:hintTextColor="@color/text_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="20"
            android:textAllCaps="false"
            android:textColor="@color/text_black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/type_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_16"
        android:fontFamily="@font/ys_display_bold"
        android:text="@string/type_object_header"
        android:textColor="@color/text_black"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_description" />

    <Spinner
        android:id="@+id/mySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_8"
        android:background="@color/background_color"
        android:fontFamily="@font/ys_display_regular"
        app:layout_constraintTop_toBottomOf="@id/type_header" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_object"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_50"
        android:layout_marginTop="@dimen/padding_16"
        android:layout_marginEnd="@dimen/padding_16"
        android:layout_marginBottom="@dimen/padding_16"
        android:clickable="true"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mySpinner" />


</androidx.constraintlayout.widget.ConstraintLayout>