<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.calendar.calendar_day.CalendarDayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:backgroundTint="@color/background_color"
            android:src="@drawable/ic_back_button_48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/action_bar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginVertical="4dp"
            android:background="@color/background_color"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:paddingStart="16dp"
            tools:text="@string/date"
            android:textColor="@color/text_black"
            android:textFontWeight="500"
            android:textSize="@dimen/text_22"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_weather"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="@dimen/padding_16"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_bar" />

        <TextView
            android:id="@+id/stats_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_16"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_weather" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/black"
            android:layout_marginTop="@dimen/padding_16"
            android:layout_marginHorizontal="@dimen/padding_16"
            app:layout_constraintTop_toBottomOf="@id/stats_weather"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/notes_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginTop="@dimen/padding_16"
            android:fontFamily="@font/ys_display_bold"
            android:text="@string/notes"
            android:textColor="@color/text_black"
            android:textFontWeight="600"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_16"
            android:layout_marginTop="@dimen/padding_16"
            android:nestedScrollingEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/add_note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notes_header"
            tools:listitem="@layout/item_note" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_note"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_50"
            android:layout_marginStart="@dimen/padding_8"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="@dimen/padding_16"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/add_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_notes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>